--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="primeira-secao">
             <img src="./assets/images/image-web-3-mobile.jpg" alt="ícone de puzzle colorido">
 
             <h1>O futuro brilhante da Web 3.0?</h1>
